--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.2",
+    "frh-react-dial-pad": "^0.1.0",
     "moment": "^2.25.3",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
